# Autodesk-Maya-Python-IntelliSense

./: .gitignore  README.md  add_pyproject.toml  mypy.ini  pyproject.toml  setup.bat
contents/2023.3/: workspaceControlState.content
contents/en_2023/: bluePencilDrawCtx.content  bluePencilFrame.content  bluePencilLayer.content  bluePencilNode.content  bluePencilStroke.content  bluePencilUtil.content  componentTag.content  keyframeTangentControl.content  proximityWrap.content
contents/jp_2023/: bluePencilDrawCtx.content  (+2 more)
contents/jp_2023.1/: bluePencilUtil.content  proximityWrap.content
contents/jp_2023.3/: bluePencilFrame.content  bluePencilNode.content  bluePencilStroke.content  translator.content  treeLister.content  treeView.content  trim.content  truncateFluidCache.content  truncateHairCache.content  tumble.content  tumbleCtx.content  turbulence.content  twoPointArcCtx.content  ubercam.content  uiTemplate.content  unassignInputDevice.content  undo.content  undoInfo.content  unfold.content  ungroup.content  uniform.content  unknownNode.content  unknownPlugin.content  unloadPlugin.content  untangleUV.content  untrim.content  upAxis.content  userCtx.content  uvLink.content  uvSnapshot.content  vectorize.content  view2dToolCtx.content  viewCamera.content  viewClipPlane.content  waitCursor.content  walkCtx.content  warning.content  workspaceLayoutManager.content  workspacePanel.content  wrinkle.content  (+5 more)
src/: check_contents.py  create_openmaya.py  create_pyi.py  create_pyi.yml  main.py  maya2023.yml  maya2024.yml  models.py  translater.py  translator.py  utils.py
(+24 files in other folders)
